updated images and main.min.js

--- a/order.html
+++ b/order.html
@@ -85,11 +85,11 @@
                             </div>
                             <div class="company-links header__company-links">
                                 <a href="#" class="footer__company-link">
-                                    <picture><source srcset="img/icons/vk.svg" type="image/webp"><img src="img/icons/vk.svg" alt="VKontakte"></picture>
+                                    <img src="img/icons/vk.svg" alt="VKontakte">
                                 </a>
 
                                 <a href="#" class="footer__company-link">
-                                    <picture><source srcset="img/icons/instagram.svg" type="image/webp"><img src="img/icons/instagram.svg" alt="instagram"></picture>
+                                    <img src="img/icons/instagram.svg" alt="instagram">
                                 </a>
                             </div>
                         </div>
